fix: add gap between left and right containter, fix icon media options, put text and textIcon into condition for image full width

--- a/editor-components/intro-section/intro-section6/intro-section6.module.scss
+++ b/editor-components/intro-section/intro-section6/intro-section6.module.scss
@@ -61,7 +61,7 @@
         position: absolute;
         left: 0;
         top: 0;
-        width: calc(50% - var(--composer-gap-md));
+        width: calc(50% - var(--composer-gap-xl));
         height: 100%;
 
         &.image-container-alone {
